<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainMarketFragment"
        android:icon="@drawable/ic_action_main_market"
        android:title="@string/mainMarketMenu" />
    <item
        android:id="@+id/marketCatalogFragment"
        android:icon="@drawable/ic_action_catalog"
        android:title="@string/catalogMenu" />
    <item
        android:id="@+id/marketBasketFragment"
        android:icon="@drawable/ic_action_basket"
        android:title="@string/basketMenu" />
    <item
        android:id="@+id/marketSearchFragment"
        android:icon="@drawable/ic_action_search"
        android:title="@string/searchMenu" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profileMenu" />
</menu>