<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenFood.market.fragments.admin.AddCatalogFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/catalog_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_catalog_name_hint"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/catalog_image_url_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_catalog_image_url_hint"/>

    <ImageView
        android:id="@+id/catalog_image_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_catalog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_catalog_btn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"/>


</LinearLayout>