<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenFood.market.fragments.MarketBasketFragment">


    <LinearLayout
        android:id="@+id/empty_basket_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/empty_basket"
            android:textSize="24sp"
            android:textColor="@color/black"/>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/empty_basket_label"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_catalog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/go_to_catalog"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basket_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"/>

    <Button
        android:id="@+id/buy"
        android:layout_width="374dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="535dp"
        android:layout_weight="1"
        android:paddingTop="4dp"
        android:text="Buy">

    </Button>

</FrameLayout>