<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="50dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/enter_phone_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textSize="18sp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_number_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_country_code_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/enter_phone_number_et"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="32dp"
                android:textSize="24sp"
                android:text="@string/phone_country_code"
                android:enabled="false"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_phone_number_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:hint="123"
                android:inputType="phone"
                android:maxLength="12"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/phone_number_country_code_et"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/get_sms_code"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_by_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/sign_in_by_email"
        app:layout_constraintTop_toBottomOf="@id/continue_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>